[package]
name = "block-bot"
version = "0.1.0"
authors = ["Mr. Awesome"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.2.2"
tokio = { version = "1", features = ["full"] }
chrono = "0"
serde_json = "1"
ethabi-next = "13.3.0"
rustc-hex = "2.1.0"
thiserror = "1.0.26"
rand = "0.8.4"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"
tracing-appender = "0.1.2"