[package]
name = "block-bot"
version = "1.0.2"
authors = ["Mr. Awesome"]
edition = "2018"
description = "tool to sniff the liquidity add event for desired token buy them automatically"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0"
serde_json = "1"
ethabi-next = "13.3.0"
rustc-hex = "2.1.0"
thiserror = "1.0.26"
rand = "0.8.4"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
clap = { version = "4.3.8", features = ["derive"] }
